kube/services/ohdsi/ohdsi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ohdsi-ingress
  annotations:
    # TODO: Make this configurable
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Environment=$vpc_name
    alb.ingress.kubernetes.io/certificate-arn: $ARN
    alb.ingress.kubernetes.io/group.name: "$vpc_name"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: $ohdsi_hostname
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ohdsi-atlas-service
                port:
                  number: 80
          - path: /WebAPI
            pathType: Prefix
            backend:
              service:
                name: ohdsi-webapi-service
                port:
                  number: 80
